<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainView">

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                android:id="@+id/button1"
                android:layout_column="0"
                android:layout_marginRight="10dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                android:id="@+id/button2"
                android:layout_column="22" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_1"
                android:id="@+id/switch1"
                android:layout_column="0"
                android:checked="false"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="10dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_2"
                android:id="@+id/switch2"
                android:layout_column="22"
                android:checked="false"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                android:id="@+id/button3"
                android:layout_column="0"
                android:layout_marginRight="10dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                android:id="@+id/button4"
                android:layout_column="22" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_3"
                android:id="@+id/switch3"
                android:layout_column="0"
                android:checked="false"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="13dp"
                />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_4"
                android:id="@+id/switch4"
                android:layout_column="22"
                android:checked="false"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

</RelativeLayout>
